# mercal

./: Cargo.toml  README.md
data/: dashboard_message.json
src/: admin_handlers.rs  auth.rs  cautela.rs  cautela_handlers.rs  checkin.rs  checkin_handlers.rs  coco.rs  escala.rs  escala_admin_handlers.rs  escala_handlers.rs  escala_pdf.rs  handlers.rs  main.rs  meals.rs  meals_handlers.rs  presence.rs  presence_handlers.rs  presence_state.rs  users.rs
src/views/: admin.rs  cautela.rs  checkin.rs  dashboard.rs  meals.rs  mod.rs  presence.rs
