[package]
name = "mercal"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros","ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15" 
futures-util = { version = "0.3.30", features = ["sink"] }
tokio-stream = "0.1"
genpdf = "0.2.0"
urlencoding = "2.1.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio-rusqlite = "0.5.0"
unidecode = "0.3.0"
